--- a/css/style.css
+++ b/css/style.css
@@ -1071,7 +1071,6 @@ a.cart::before {
   justify-content: space-between;
 }
 
-
 .templates {
   width: 760px;
 }
@@ -1081,42 +1080,79 @@ a.cart::before {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 .catalog-item {
+  position: relative;
   margin-bottom: 35px;
   width: 360px;
-  min-height: 230px;
+  min-height: 620px;
+  background-image: url("../img/browser.svg");
+  background-repeat: no-repeat;
+  background-position: top left;
+  z-index: 3;
 }
 
-.selected-item .catalog-item-text {
+
+.catalog-item-details {
   box-sizing: border-box;
   width: 100%;
   background-color: #eeeeee;
+  display:none; 
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
 }
 
-.catalog-item .templates-title {
+.catalog-item-details h3 {
   font-size: 18px;
   line-height: 30px;
   font-weight: 700;
   color: #000000;
   text-transform: uppercase;
+  text-align: center;
 }
 
-.catalog-item p {
+
+.catalog-item-details p {
   line-height: 18px;
   color: #666666;
+  text-align: center;
 }
 
+
+
+.catalog-item:hover .catalog-item-details {
+ display: block;
+}
+
+
+
+
+
 /* постраничная навигация*/
-.pagination-item a {
+.pagination-list  {
+  display: flex;
+}
+
+.pagination-item  {
   line-height: 18px;
   font-weight: 500;
   color: #000000;
   text-transform: uppercase;
+  padding-left:15px;
+  padding-right:15px;
+  padding-top:10px;
+  padding-bottom:10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  background-color: #eeeeee
+  
 }
 
-.pagination-item-current {
+.current-item {
   background-color: #ffffff;
   border: 2px solid #dbdbdb;
+  
 }
 
 .pagination-list li:hover,
@@ -1129,6 +1165,11 @@ a.cart::before {
   background-color: #d5d5d5;
   border: none;
 }
+
+
+
+
+
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
