--- a/css/style.css
+++ b/css/style.css
@@ -861,6 +861,7 @@ a.cart::before {
 /* блок правил для внутренней  страницы*/
 .inner-page .main-header {
   min-height: 355px;
+  margin-bottom: 60px;
 }
 
 .inner-page .main-navigation { 
@@ -882,10 +883,6 @@ a.cart::before {
   border: none;
 }
 
-.range-filter {
-  width: 260px;
-  margin-top: 49px;
-}
 
 .filter-item legend {
   font-size: 18px;
@@ -893,6 +890,19 @@ a.cart::before {
   text-transform: uppercase;
   font-weight: 700;
 }
+
+.range-filter {
+  width: 260px;
+  margin-bottom: 50px;
+}
+
+.range-filter legend {
+  margin-bottom: 50px;
+}
+
+
+
+
 
 .range-controls {
   position: relative;
@@ -911,8 +921,9 @@ a.cart::before {
 }
 
 .range-controls .bar {
-  width: 70%;
   height: 2px;
+  margin-left: 20%;
+  width: 30%;
   background: #00ca74;
 }
 
@@ -967,12 +978,17 @@ a.cart::before {
 }
 
 /*блок Сетки*/
+.layout-filter legend {
+  margin-bottom: 15px;
+}
+
 .list-layout li {
   padding-bottom: 10px;	
 }
 
 .radio-control {
   position: relative;
+  display: inline-block;
   padding-left: 30px;
   cursor: pointer;
 }
@@ -1026,12 +1042,16 @@ a.cart::before {
 
 
 /*блок для особенностей*/
+.features-filter legend {
+  margin-bottom: 15px;
+} 
 .list-features li {
   padding-bottom: 10px;	
 }
 
 .checkbox-control {
   position: relative;
+  display: inline-block;
   padding-left: 30px;
   cursor: pointer;
 }
@@ -1098,7 +1118,7 @@ a.cart::before {
   background-color: #dfdfdf;
 }
 
-/* КНОПКА НЕ ТАК СЕБЯ ВЕДЁТ ПОСЛЕ НАЖАТИЯ */
+
 .button-show:active {
   background-color: #d5d5d5;
   color: #a9a9a9;
@@ -1110,6 +1130,8 @@ a.cart::before {
 .sort {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
 }
 
 .sort-list {
@@ -1125,37 +1147,57 @@ a.cart::before {
   font-weight: 700;
 }
 
-.sort-list li {
+.sort-list a {
   font-size: 14px;
   line-height: 18px;
-  color: cacaca;
+  color: rgba(0, 0, 0, 0.3);
   text-transform: uppercase;
 }
 
-.sort-list .current {
+
+.sort-list a:hover,
+.sort-list a:focus {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.sort-list a:active {
+  color:  #000000;
+}
+
+.sort-list .selected a {
   color: #000000;
 }
 
 
-.btn-down a {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  background-image: url("../img/icon-down-dir.svg");
-  background-repeat: no-repeat;
-}
-
-
+.btn-down a,
 .btn-up a {
   display: inline-block;
   width: 12px;
   height: 12px;
+  opacity: 0.3;
+}
+
+.btn-down a {
+  background-image: url("../img/icon-down-dir.svg");
+  background-repeat: no-repeat;
+}
+
+.btn-up a {
   background-image: url("../img/icon-up-dir.svg");
   background-repeat: no-repeat;
 }
 
+.btn-down a:hover,
+.btn-up a:hover,
+.btn-down a:focus,
+.btn-up a:focus {
+  opacity: 0.6;
+}
 
-
+.btn-down a:active,
+.btn-up a:active {
+  opacity: 1;
+}
 
 
 
@@ -1180,12 +1222,25 @@ a.cart::before {
   margin-bottom: 35px;
   width: 360px;
   min-height: 620px;
-  background-image: url("../img/browser.svg");
-  background-repeat: no-repeat;
-  background-position: top left;
   z-index: 30;
 }
 
+
+
+.catalog-item::before {
+    content: "";
+    display: inline-block;
+    vertical-align: top;
+    background: url(../img/browser.svg) no-repeat;
+    height: 40px;
+    width: 360px;
+    opacity: 0.3;
+    padding: 0;
+}
+
+.catalog-item:hover:before {
+    opacity: 1;
+}
 
 .catalog-item-details {
   box-sizing: border-box;
