--- a/css/style.css
+++ b/css/style.css
@@ -822,7 +822,7 @@ a.cart::before {
 }
 
 .modal-write-us input[type="text"]:invalid,
-.modal-write-us input[type="email"]:invalid, {
+.modal-write-us input[type="email"]:invalid {
   color: #e74246;
   border-color: #e74246;
 }
@@ -868,7 +868,7 @@ a.cart::before {
   margin-top: 15px;
   text-align: center;
   font-size: 55px;
-  line-height: 66x;
+  line-height: 66px;
   font-weight: 500;
 }
 
