Поправил форму с минимальной и максимальной ценой

--- a/css/style.css
+++ b/css/style.css
@@ -950,6 +950,7 @@ a.cart::before {
 }
 
 .price-controls {
+  display: flex;
   font-size: 0;
   margin-bottom: 57px;
 }
@@ -959,6 +960,7 @@ a.cart::before {
   width: 50%;
   font-size: 16px;
   text-transform: uppercase;
+  padding-top: 8px;
 }
 
 .price-controls input {
