--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,6 @@ body {
   background-color: #ffffff;
 }
 
-main,
-aside,
-nav, 
-footer, 
-header, 
-section { 
-  display: block;
-}
-
 img {
   max-width: 100%;
   height: auto;
@@ -25,10 +16,6 @@ img {
 
 a {
   text-decoration: none;
-}
-
-a > img {
-  border: 0;
 }
 
 .text-uppercase {
@@ -42,6 +29,7 @@ a > img {
 }
 
 .container {
+  display: block;
   width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
@@ -157,17 +145,18 @@ a.cart.active {
 }
 
 a.cart {
+  padding-left: 40px;
   position: relative;
 }
 
 a.cart::before {
   content: "";
+  position: absolute;
+  top: 7px;
+  left: 0;
   width: 15px;
   height: 15px;
-  position: absolute;
   background: url("../img/cart-icon.svg") no-repeat;
-  top: 7px;
-  left: -40px;
 }
 
 .slider {
@@ -194,9 +183,10 @@ a.cart::before {
 .slider-controls label {
   position: relative;
   display: inline-block;
+  vertical-align: baseline;
+  padding: 8px;
   width: 18px;
   height: 18px;
-  padding: 8px;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -242,40 +232,40 @@ a.cart::before {
   background-position: 100% 20px;
 }
 
-#product-1:checked~.slider-list .slider-item:nth-child(1) {
+.product-1:checked~.slider-list .slider-item:nth-child(1) {
   display: block;
 }
 
-#product-2:checked~.slider-list .slider-item:nth-child(2) {
+.product-2:checked~.slider-list .slider-item:nth-child(2) {
   display: block;
 }
 
-#product-3:checked~.slider-list .slider-item:nth-child(3) {
+.product-3:checked~.slider-list .slider-item:nth-child(3) {
   display: block;
 }
 
-#product-1:checked~.slider-controls .slider-controls-item--1::before,
-#product-2:checked~.slider-controls .slider-controls-item--2::before,
-#product-3:checked~.slider-controls .slider-controls-item--3::before {
+.product-1:checked~.slider-controls .slider-controls-item--1::before,
+.product-2:checked~.slider-controls .slider-controls-item--2::before,
+.product-3:checked~.slider-controls .slider-controls-item--3::before {
   content: "";
   position: absolute;
   left: 50%;
   top: 50%;
   z-index: 2;
+  margin: -4px;
   width: 4px;
   height: 4px;
-  margin: -4px;
   background-color: inherit;
   border: 2px solid #c1c1c1;
   border-radius: 50%;
 }
 
 .slider-item h3 {
-    max-width: 600px;
-    margin: -4px 0 27px;
-    font-size: 55px;
-    line-height: 55px;
-    font-weight: 500;
+  max-width: 600px;
+  margin: -4px 0 27px;
+  font-size: 55px;
+  line-height: 55px;
+  font-weight: 500;
 }
 
 .slider-item p {
@@ -287,15 +277,15 @@ a.cart::before {
 .button {
   display: table-cell;
   padding: 17px 54px;
-  text-align: center;
-  vertical-align: middle;
-  text-transform: uppercase;
   border: none;
-  color: #ffffff;
-  background-color: #fb565a;
   font-size: 16px;
   line-height: 18px;
   font-weight: 500;
+  text-align: center;
+  vertical-align: middle;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #fb565a;
   border-radius: 3px;
   cursor: pointer;
 }
@@ -422,44 +412,45 @@ a.cart::before {
 }
 
 .studio-left b {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 32px;
+  margin-bottom: 15px;
   font-size: 45px;
   line-height: 47px;
   font-weight: 500;
-  margin-top: 32px;
-  margin-bottom: 15px;
-  display: inline-block;
 }
 
 .studio-left p {
+  margin-bottom: 40px;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  margin-bottom: 40px;
 }
 
 .studio-left h3 {
+  margin-bottom: 23px;
   font-size: 16px;
   line-height: 24px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 23px;
 }
 
 .studio-left li {
+  margin-bottom: 24px;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  margin-bottom: 24px;
 }
 
 .studio-left li::before {
   content: "";
   display: inline-block;
+  vertical-align: middle;
   margin-right: 10px;
   width: 25px;
   height: 2px;
   background-color: #fb565a;
-  vertical-align: middle;
 }
 
 .studio-left-text {
@@ -479,11 +470,11 @@ a.cart::before {
 }
 
 .studio-table caption {
+  margin-bottom: 33px;
   font-size: 16px;
   line-height: 24px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 33px;
 }
 
 .studio-table td {
@@ -503,6 +494,7 @@ a.cart::before {
 }
 
 .studio-table-percent sup {
+  top: 0;
   font-size: 24px;
   line-height: 1;
   vertical-align: super;
@@ -571,7 +563,8 @@ a.cart::before {
 
 .contacts-name {
   display: inline-block;
-  margin-bottom: 19px;
+  vertical-align: top;
+  margin-bottom: 18px;
   font-size: 18px;
   line-height: 30px;
   font-weight: 700;
@@ -579,7 +572,8 @@ a.cart::before {
 }
 
 .contacts-addres {
-  margin-bottom: 19px;
+  margin-bottom: 20px;
+  width: 210px;
   font-size: 16px;
   line-height: 18px;
   font-style: normal;
@@ -603,18 +597,19 @@ a.cart::before {
   line-height: 18px;
   font-weight: 400;
   text-align: center;
-  background-color: #fb565a;
   color: #ffffff;
+  background-color: #fb565a;
+
 }
 
 .write-button:hover {
-  background-color: #e74246;
   color: #ffffff;
+  background-color: #e74246;
 }
 
 .write-button:active {
+  color: rgba(255, 255, 255, 0.3);
   background-color: #d7373b;
-  color: #e48789;
 }
 
 .footer-social {
@@ -632,10 +627,10 @@ a.cart::before {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 260px;
   margin: 0;
   margin-right: 140px;
   padding: 0;
+  width: 260px;
 }
 
 .social-button {
@@ -669,6 +664,7 @@ a.cart::before {
 
 .social-text b {
   display: inline-block;
+  vertical-align: top;
   margin-bottom: 11px;
   font-size: 36px;
   line-height: 36px;
@@ -685,18 +681,18 @@ a.cart::before {
 }
 
 .modal-write-us {
-  display: none;
   position: fixed;
+  top: 50%;
+  left: 50%;
   z-index: 20;
+  display: none;
   padding-left: 100px;
   padding-right: 100px;
   padding-top: 65px;
   padding-bottom: 80px;
-  background: white;
   width: 960px;
   min-height: 590px;
-  top: 50%;
-  left: 50%;
+  background: white;
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -743,11 +739,11 @@ a.cart::before {
 }
 
 .modal-write-us h2 {
+  margin: 0;
+  margin-bottom: 35px;
   font-size: 45px;
   line-height: 50.4px;
   font-weight: 500;
-  margin: 0;
-  margin-bottom: 35px;
 }
 
 .name-email {
@@ -783,6 +779,9 @@ a.cart::before {
 .modal-write-us input[type="text"],
 .modal-write-us input[type="email"],
 .modal-write-us textarea {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
   font: inherit;
   font-size: 16px;
   line-height: 18px;
@@ -792,9 +791,6 @@ a.cart::before {
   border-radius: 2px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 15px;
 }
 
 .modal-write-us input[type="email"] {
@@ -832,20 +828,20 @@ a.cart::before {
 }
 
 .modal-write-us input[type="submit"] {
+  display: table-cell;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin-bottom: 25px;
   width: 265px;
   text-align: center;
   vertical-align: middle;
   text-transform: uppercase;
   border: none;
-  display: table-cell;
   color: #ffffff;
   background-color: #fb565a;
   font-size: 16px;
   line-height: 18px;
   font-weight: 500;
-  margin-bottom: 25px;
 }
 
 .modal-write-us input[type="submit"]:hover {
@@ -873,7 +869,6 @@ a.cart::before {
 }
 
 .title {
- /* margin-top: -7px;*/
   text-align: center;
   font-size: 55px;
   line-height: 66px;
@@ -894,9 +889,9 @@ a.cart::before {
 }
 
 .range-filter {
-  width: 260px;
   margin-bottom: 50px;
   margin-top: 50px;
+  width: 260px;
 }
 
 .range-filter legend {
@@ -920,9 +915,9 @@ a.cart::before {
 }
 
 .range-controls .bar {
-  height: 2px;
   margin-left: 0;
   width: 70%;
+  height: 2px;
   background: #00ca74;
 }
 
@@ -950,23 +945,20 @@ a.cart::before {
 }
 
 .price-controls {
-  display: flex;
-  font-size: 0;
   margin-bottom: 57px;
+  font-size: 0;
 }
 
 .price-controls label {
-  display: inline-block;
-  width: 50%;
+  padding-top: 8px;
   font-size: 16px;
   text-transform: uppercase;
-  padding-top: 8px;
 }
 
 .price-controls input {
-  width: 60px;
   padding: 8px 10px;
   margin-left: 10px;
+  width: 60px;
   font: inherit;
   font-size: 16px;
   text-align: center;
@@ -977,7 +969,7 @@ a.cart::before {
 }
 
 .max-price {
-  text-align: right;
+  margin-left: 35px;
 }
 
 .layout-filter legend {
@@ -992,8 +984,10 @@ a.cart::before {
 .radio-control {
   position: relative;
   display: inline-block;
+  vertical-align: top;
   padding-left: 35px;
   cursor: pointer;
+
 }
 
 .radio-control:hover,
@@ -1001,29 +995,29 @@ a.cart::before {
   color: #4d4d4d;
 }
 
-.radio-control-indicator + label::before {
+.radio-control-indicator + .radio-control::before {
   content: "";
+  position: absolute;
+  top: 0px;
+  left: 5px;
   width: 28px;
   height: 28px;
-  position: absolute;
   background-image: url("../img/radio-off.svg");
   background-repeat: no-repeat;
   border-radius: 50%;
-  top: 0px;
-  left: 5px;
   opacity: 0.3;
 }
 
-.radio-control-indicator:checked + label::before {
+.radio-control-indicator:checked + .radio-control::before {
   content: "";
   width: 28px;
   height: 28px;
   position: absolute;
+  top: 0px;
+  left: 5px;
   background-image: url("../img/radio-on.svg");
   background-repeat: no-repeat;
   border-radius: 50%;
-  top: 0px;
-  left: 5px;
   opacity: 0.3;
 }
 
@@ -1043,6 +1037,7 @@ a.cart::before {
 .checkbox-control {
   position: relative;
   display: inline-block;
+  vertical-align: top;
   padding-left: 35px;
   cursor: pointer;
 }
@@ -1052,45 +1047,45 @@ a.cart::before {
   color: #4d4d4d;
 }
 
-.checkbox-control-indicator + label::before {
+.checkbox-control-indicator + .checkbox-control::before {
   content: "";
+  position: absolute;
+  top: 0px;
+  left: 5px;
   width: 28px;
   height: 28px;
-  position: absolute;
   background-image: url("../img/checkbox-off.svg");
   background-repeat: no-repeat;
-  top: 0px;
-  left: 5px;
   opacity: 0.3;
 }
 
-.checkbox-control-indicator:checked + label::before {
+.checkbox-control-indicator:checked + .checkbox-control::before {
   content: "";
+  position: absolute;
+  top: 0px;
+  left: 5px;
   width: 28px;
   height: 28px;
-  position: absolute;
   background-image: url("../img/checkbox-on.svg");
   background-repeat: no-repeat;
-  top: 0px;
-  left: 5px;
   opacity: 0.3;
 }
 
-.radio-control-indicator:focus + label::before,
-.checkbox-control-indicator:focus + label::before,
-.radio-control-indicator:checked:focus + label::before,
-.checkbox-control-indicator:checked:focus + label::before,
-.radio-control-indicator:not(:disabled) + label:hover::before,
-.checkbox-control-indicator:not(:disabled) + label:hover::before,
-.radio-control-indicator:checked:not(:disabled) + label:hover::before,
-.checkbox-control-indicator:checked:not(:disabled) + label:hover::before {
+.radio-control-indicator:focus + .radio-control::before,
+.checkbox-control-indicator:focus + .checkbox-control::before,
+.radio-control-indicator:checked:focus + .radio-control::before,
+.checkbox-control-indicator:checked:focus + .checkbox-control::before,
+.radio-control-indicator:not(:disabled) + .radio-control:hover::before,
+.checkbox-control-indicator:not(:disabled) + .checkbox-control:hover::before,
+.radio-control-indicator:checked:not(:disabled) + .radio-control:hover::before,
+.checkbox-control-indicator:checked:not(:disabled) + .checkbox-control:hover::before {
   opacity: 1;
 }
 
-.radio-control-indicator:disabled + label::before,
-.checkbox-control-indicator:disabled + label::before,
-.radio-control-indicator:checked:disabled + label::before,
-.checkbox-control-indicator:checked:disabled + label::before {
+.radio-control-indicator:disabled + .radio-control::before,
+.checkbox-control-indicator:disabled + .radio-control::before,
+.radio-control-indicator:checked:disabled + .radio-control::before,
+.checkbox-control-indicator:checked:disabled + .checkbox-control::before {
   opacity: 0.1;
 }
 
@@ -1130,8 +1125,8 @@ a.cart::before {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  width: 360px;
   margin-top: -3px;
+  width: 360px;
 }
 
 .sort-list > li {
@@ -1176,6 +1171,7 @@ a.cart::before {
 
 .sort-arrows > li {
   display: inline-block;
+  vertical-align: top;
 }
 
 .sort-arrows > li:first-child {
@@ -1235,25 +1231,25 @@ a.cart::before {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
 }
 
 .catalog-item {
   position: relative;
   margin-bottom: 27px;
   width: 360px;
-  min-height: 620px;
+  height: 620px;
 }
 
 .catalog-item::before {
   content: "";
   display: inline-block;
   vertical-align: top;
-  background: url(../img/browser.svg) no-repeat;
+  padding: 0;
   height: 40px;
   width: 360px;
+  background: url(../img/browser.svg) no-repeat;
   opacity: 0.3;
-  padding: 0;
 }
 
 .catalog-item:hover:before {
@@ -1261,19 +1257,19 @@ a.cart::before {
 }
 
 .catalog-item-details {
+  position: absolute;
+  bottom: 4px;
+  display: none;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding-top: 25px;
   padding-right: 60px;
   padding-left: 60px;
-  padding-bottom: 40px;
-  width: 100%;
-  background-color: #eeeeee;
-  display: none;
-  position: absolute;
-  bottom: 8px;
-  text-align: center;
+  padding-bottom: 45px;
   width: 360px;
+  max-height: 570px;
+  background-color: #eeeeee;
+  text-align: center;
 }
 
 .catalog-item-details h3 {
@@ -1287,16 +1283,19 @@ a.cart::before {
 }
 
 .catalog-item-details .catalog-text {
+  overflow-y: auto;
   margin-bottom: 30px;
   max-width: 240px;
+  max-height: 380px;
   line-height: 18px;
   color: #666666;
 }
 
 .catalog-item-details .button {
   display: inline-block;
-  text-align: center;
+  vertical-align: bottom;
   width: 95px;
+  text-align: center;
 }
 
 .catalog-item-details .button:hover {
@@ -1323,20 +1322,20 @@ a.cart::before {
 
 .pagination-item a {
   display: inline-block;
+  vertical-align: bottom;
   padding-top: 13px;
   padding-left: 17px;
   padding-bottom: 13px;
   padding-right: 17px;
-
   font-size: 16px;
   line-height: 18px;
   font-weight: 500;
   text-transform: uppercase;
   color: #000000;
-
   background-color: #eeeeee;
   border: 3px solid #eeeeee;
   border-radius: 3px;
+
 }
 
 .pagination-item:last-child a {
